log
Fri, Oct  3, 2025  8:06:27 PM: 
 sudoku.c | 43 +++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 41 insertions(+), 2 deletions(-)
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:108:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
3f0e54c
Fri, Oct  3, 2025  8:07:06 PM: 
Compilation failed
test.c:245:5: error: redefinition of 'main'
 int main( int argc, char *argv[] ) {
     ^~~~
In file included from test.c:5:0:
sudoku.c:108:5: note: previous definition of 'main' was here
 int main( int argc, char *argv[] ){
     ^~~~
54c04bf
Fri, Oct  3, 2025  8:30:33 PM: 
 sudoku.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
832900d
Fri, Oct  3, 2025  8:35:30 PM: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  7|1
total_score: 55/70
5422a1d
